# ruscode

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: CI.yml  codecov.yml  lint-markdown.yml  release.yml
deb/: control
publish/deb/ruscode/DEBIAN/: control
publish/scoop/: ruscode.json
src/: main.rs
src/application/: app.rs  error.rs  manage.rs  mod.rs  stateful_list.rs  tab_state.rs
src/common/: mod.rs  system.rs  text.rs
src/domain/: mod.rs
src/domain/detail/: mod.rs
src/domain/entity/: mod.rs  tag.rs  workspace.rs
src/domain/repository/: base.rs
src/domain/searching/: parse.rs
src/domain/system/: error.rs  folder_observer.rs  init.rs  mod.rs  scan.rs
src/domain/value_object/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/repository/: error.rs  macros.rs  mod.rs  schema.sql  workspace_repository.rs
src/presentation/: error.rs  management.rs  mod.rs  style.rs  text.rs  ui.rs
