[package]
name = "ruscode"
version = "1.0.0"
edition = "2021"
authors = ["Hao-Wei"]
readme = "README.md"
license-file = "LICENSE"
description = "ruscode - A visual studio code's workspaces organizer written in Rust"
homepage = "https://github.com/MissterHao/ruscode"
repository = "https://github.com/MissterHao/ruscode"
documentation = "https://github.com/MissterHao/ruscode"
keywords = ["development-tools", "tui", "cli", "terminal", "command-line"]
exclude = ["assets/*", ".github", "publish/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.19.0", features = ["crossterm"], default-features = false }
crossterm = "0.27.0"
log = "0.4"
tui-logger = "0.8.1"
clap = { version = "4.0.22", features = ["derive"] }
glob = "0.3.0"
urlencoding = "2.1.2"
serde = {version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
crossbeam-channel = "0.5.6"
thiserror = "1.0.37"
rusqlite = { version = "0.28.0", features = ["bundled"] }
unicode-width = "0.1.10"
regex = "1.7.0"
chrono = "0.4.23"


[profile.release]
# Enable Link Time Optimization 
lto = true
codegen-units = 1
opt-level = 'z'
panic = "abort"
